--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
 </div>
 
 <div style="margin-top:15px;">
-  <button id="generateBtn" onclick="generer()">Générer ma signature 🙂</button>
-  <button id="copyBtn" onclick="copierHTML()">Copier la signature (HTML)</button>
-  <button id="resetBtn" onclick="resetForm()">Réinitialiser le formulaire</button>
+  <button id="generateBtn" onclick="generer()">✨ Générer ma signature</button>
+  <button id="copyBtn" onclick="copierHTML()">📋 Copier la signature (HTML)</button>
+  <button id="resetBtn" onclick="resetForm()">🔄 Réinitialiser le formulaire</button>
 </div>
 
 <div class="confirmation hidden" id="confirmationMessage">Votre signature a bien été générée ci-dessous ✅</div>
